# bunsenite

./: .editorconfig  .guix-channel  .tool-versions  AGENTIC.scm  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Containerfile  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  LICENSE.txt  MAINTAINERS.md  META.scm  NEUROSYM.scm  PACKAGING.md  PLAYBOOK.scm  PROOF-NEEDS.md  PROVEN-INTEGRATION.md  PUBLISHING.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  RSR_OUTLINE.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  TS_CONVERSION_NEEDED.md  codemeta.json  eclexiaiser.toml  flake.nix  guix.scm  (+8 more)
.clusterfuzzlite/: Containerfile  Dockerfile  build.sh  project.yaml
.github/: dependabot.yml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  codeql-analysis.yml  codeql.yml  comprehensive-quality.yml  datadog-synthetics.yml  generator-generic-ossf-slsa3-publish.yml  ghcr-publish.yml  guix-nix-policy.yml  hypatia-scan.yml  mirror.yml  npm-bun-blocker.yml  publish-aur.yml  publish-chocolatey.yml  publish-container.yml  publish-copr.yml  publish-debian-ppa.yml  publish-flatpak.yml  publish-homebrew.yml  publish-macports.yml  publish-nixpkgs.yml  publish-obs.yml  publish-packages.yml  publish-scoop.yml  publish-winget.yml  quality.yml  release.yml  rsr-antipattern.yml  rust-ci.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  stress-test.yml  ts-blocker.yml  wellknown-enforcement.yml  workflow-linter.yml  zig-ffi.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile  root-allow.txt
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/6a2/anchor/: ANCHOR.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
.well-known/: ai.txt  dc.xml  humans.txt  security.txt
benches/: bunsenite_bench.rs  parser.rs
bindings/deno/: README.md  bunsenite.ts  example.ts
bindings/rescript/: Bunsenite_test.res  Example.res  README.md  bunsenite.d.ts  bunsenite_ffi.js  bunsenite_ffi_node.js  package.json  rescript.json
config/: README.adoc  build.k9.ncl  rust-fmt.k9.ncl
contractiles/intend/: Intentfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: CITATIONS.adoc  tech-debt-2026-05-26.md  wiki-home.md
ffi/zig/src/: main.zig
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs
packaging/arch/: PKGBUILD  PKGBUILD-bin
packaging/aur-ready/: .SRCINFO  PKGBUILD
packaging/chocolatey/: bunsenite.nuspec
packaging/debian/: control  rules
packaging/flatpak/: com.campaignforcoolercoding.bunsenite.yml
packaging/homebrew/: bunsenite.rb
packaging/macports/: Portfile
packaging/rpm/: bunsenite.spec
packaging/scoop/: bunsenite.json
packaging/winget/: bunsenite.yaml
papers/arxiv/: Makefile  bunsenite.aux  bunsenite.out  bunsenite.tex
src/: error.rs  ffi.rs  lib.rs  loader.rs  main.rs  schema.rs  wasm.rs
tests/: aspect_test.rs  e2e_test.rs  integration_test.rs  property_test.rs
zig/: README.md  build.zig  bunsenite.zig
