# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "bunsenite-fuzz"
version = "0.0.0"
authors = ["hyperpolymath"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.bunsenite]
path = ".."

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false
